kube/flipstarter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: flipstarter-globalbitcoin
    version: 0.0.1
  name: flipstarter-globalbitcoin
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      service: flipstarter-globalbitcoin
  template:
    metadata:
      labels:
        service: flipstarter-globalbitcoin
    spec:
      containers:
      - image: zquestz/flipstarter:latest
        name: flipstarter-globalbitcoin
        volumeMounts:
          - mountPath: /app/static/campaigns
            name: flipstarter-globalbitcoin-data
        resources:
          requests:
            memory: "256Mi"
        ports:
          - name: web
            containerPort: 3000
      restartPolicy: Always
      volumes:
        - name: flipstarter-globalbitcoin-data
          gcePersistentDisk:
            pdName: flipstarter-globalbitcoin-data
            fsType: ext4
