kube/flipstarter-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: flipstarter-eatbch
  namespace: default
spec:
  ports:
    - port: 350
      targetPort: 3000
  selector:
    service: flipstarter-eatbch
  type: NodePort
