kube/flipstarter-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flipstarter-globalbitcoin-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - flipstarter.globalbitcoin.cash
    secretName: flipstarter-globalbitcoin-tls
  backend:
    serviceName: flipstarter-globalbitcoin
    servicePort: 305
  rules:
  - host: flipstarter.globalbitcoin.cash
    http:
      paths:
      - path: /
        backend:
          serviceName: flipstarter-globalbitcoin
          servicePort: 305
